RESOLVED FIXED 139475
REGRESSION(r177038): [SOUP] [GTK] Debug build broken
https://bugs.webkit.org/show_bug.cgi?id=139475
Summary REGRESSION(r177038): [SOUP] [GTK] Debug build broken
Carlos Alberto Lopez Perez
Reported 2014-12-10 03:39:34 PST
Revision r177038 <http://trac.webkit.org/r177038> added a new method NetworkProcess::clearDiskCache() that only was implemented for MAC ports. This has caused build failures on the GTK Debug build: https://build.webkit.org/builders/GTK%20Linux%2064-bit%20Debug%20%28Build%29/builds/47106/steps/compile-webkit/logs/stdio
Attachments
Patch (1.75 KB, patch)
2014-12-10 03:49 PST, Carlos Alberto Lopez Perez
no flags
Carlos Alberto Lopez Perez
Comment 1 2014-12-10 03:49:23 PST
WebKit Commit Bot
Comment 2 2014-12-10 03:50:01 PST
Attachment 243006 [details] did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/soup/NetworkProcessSoup.cpp:148: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3 2014-12-10 04:39:55 PST
The commit-queue encountered the following flaky tests while processing attachment 243006 [details]: The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2014-12-10 04:40:23 PST
The commit-queue encountered the following flaky tests while processing attachment 243006 [details]: transitions/default-timing-function.html bug 138901 (author: simon.fraser@apple.com) The commit-queue is continuing to process your patch.
Carlos Alberto Lopez Perez
Comment 5 2014-12-10 04:49:40 PST
Comment on attachment 243006 [details] Patch Committing manually.. cq seems borked
WebKit Commit Bot
Comment 6 2014-12-10 04:50:41 PST
Comment on attachment 243006 [details] Patch Clearing flags on attachment: 243006 Committed r177056: <http://trac.webkit.org/changeset/177056>
WebKit Commit Bot
Comment 7 2014-12-10 04:50:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.