REGRESSION(r177038): [SOUP] [GTK] Debug build broken https://bugs.webkit.org/show_bug.cgi?id=139475

Reviewed by Martin Robinson.

* NetworkProcess/soup/NetworkProcessSoup.cpp:
(WebKit::NetworkProcess::clearCacheForAllOrigins): Call clearDiskCache().
(WebKit::NetworkProcess::clearDiskCache): Implement this for SOUP.
SoupCache don't seems to have API for clearing a part of the cache,
so add a FIXME note regarding that.


Canonical link: https://commits.webkit.org/157330@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177056 268f45cc-cd09-0410-ab3c-d52691b4dbfc